# klaudia

./: .gitignore  README.md  pyproject.toml
core/supervisor/: __init__.py  _content.py  _context.py  agent.py  llm.py  prompts.py  router.py  state.py
core/supervisor/agents/data_entry_team/: __init__.py  agents.py  prompts.py
core/supervisor/agents/sql_agent/: __init__.py  agent.py  prompts.py
core/supervisor/tools/: __init__.py  context.py  coordinates.py  wrappers.py
interfaces/: __init__.py  agent.py  tool_registry.py
models/: __init__.py  message.py  state.py
