[project]
name = "klaudia"
version = "0.1.0"
description = "Klaudia AI Supervisor Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.13.0",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain>=0.3.20",
    "langgraph>=0.3.30",
    "pydantic>=2.11.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
